chore: release v0.6.2-beta.5

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "banh",
-  "version": "0.6.2-beta.4",
+  "version": "0.6.2-beta.5",
   "repository": {
     "type": "git",
     "url": "https://github.com/daniel-le97/banh.git"
@@ -8,24 +8,25 @@
   "homepage": "https://github.com/daniel-le97/banh#readme",
   "scripts": {
     "build": "bun run built.ts",
-    "prepublishOnly": "bun run build",
     "release": "bumpp && npm publish",
     "dev": "bun playground/index.ts"
   },
-  "main": "./dist/src/banh.ts",
-  "module": "./dist/src/banh.ts",
+  "main": "./dist/index.ts",
+  "module": "./dist/index.ts",
+  "types": "./dist/index.d.ts",
   "devDependencies": {
     "@types/react-dom": "latest",
     "bumpp": "^9.2.0",
+    "bun-plugin-dts": "^0.2.0",
     "bun-types": "latest",
+    "consola": "^3.2.3",
     "elysia": "^0.6.23",
     "globby": "^13.2.2",
     "hookable": "^5.5.3",
     "react": "^18.2.0",
     "react-dom": "canary",
     "svelte": "^4.2.0",
-    "vue": "^3.3.4",
-    "consola": "^3.2.3"
+    "vue": "^3.3.4"
   },
   "contributors": [
     "Daniel le <daniel97.le@gmail.com>"
